--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
-    "rxjs": "^5.1.0",
+    "rxjs": "5.5.2",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
